--- a/src/shims/Directory.Build.props
+++ b/src/shims/Directory.Build.props
@@ -20,6 +20,6 @@
 
   <PropertyGroup>
     <!-- shared folder for ApiCompat.proj and shims.proj -->
-    <GenFacadesOutputPath>$(RootBaseIntermediateOutputPath)shims/$(TargetGroup)/</GenFacadesOutputPath>
+    <GenFacadesOutputPath>$(ObjDir)shims/$(TargetGroup)/</GenFacadesOutputPath>
   </PropertyGroup>
 </Project>
