--- a/tools-local/targetgroups.props
+++ b/tools-local/targetgroups.props
@@ -2,6 +2,7 @@
 <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <TargetGroups Include="netcore50">
+      <TargetFrameworkIdentifier>.NETCore</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.Private.NetNative</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETCore,Version=v5.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcore50</NuGetTargetMonikerShort>
@@ -9,6 +10,7 @@
       <CompatibleWith>netstandard1.4</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="netcore50aot">
+      <TargetFrameworkIdentifier>.NETCore</TargetFrameworkIdentifier>
       <PackageTargetRuntimeSuffix>aot</PackageTargetRuntimeSuffix>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.Private.NetNative</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETCore,Version=v5.0</NuGetTargetMoniker>
@@ -18,6 +20,7 @@
       <CompatibleWith>netstandard1.4</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="uap10.0.16299aot">
+      <TargetFrameworkIdentifier>UAP</TargetFrameworkIdentifier>
       <PackageTargetRuntimeSuffix>aot</PackageTargetRuntimeSuffix>
       <NuGetTargetMoniker>UAP,Version=v10.0.16299</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>uap10.0.16299</NuGetTargetMonikerShort>
@@ -26,6 +29,7 @@
       <CompatibleWith>uap10.0.16299;netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="uap10.0.16299">
+      <TargetFrameworkIdentifier>UAP</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>UAP,Version=v10.0.16299</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>uap10.0.16299</NuGetTargetMonikerShort>
       <UWPCompatible>true</UWPCompatible>
@@ -33,6 +37,7 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="uapvnextaot">
+      <TargetFrameworkIdentifier>UAP</TargetFrameworkIdentifier>
       <PackageTargetRuntimeSuffix>aot</PackageTargetRuntimeSuffix>
       <NuGetTargetMoniker>$(UAPvNextTFMFull)</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>$(UAPvNextTFM)</NuGetTargetMonikerShort>
@@ -41,6 +46,7 @@
       <CompatibleWith>uapvnext;netstandard2.0</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="uapvnext">
+      <TargetFrameworkIdentifier>UAP</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>$(UAPvNextTFMFull)</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>$(UAPvNextTFM)</NuGetTargetMonikerShort>
       <UWPCompatible>true</UWPCompatible>
@@ -49,6 +55,7 @@
     </TargetGroups>
     <!-- uap is an alias for uapvNext any/coreclr runtime -->
     <TargetGroups Include="uap">
+      <TargetFrameworkIdentifier>UAP</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>$(UAPvNextTFMFull)</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>$(UAPvNextTFM)</NuGetTargetMonikerShort>
       <UWPCompatible>true</UWPCompatible>
@@ -57,6 +64,7 @@
     </TargetGroups>
     <!-- uapaot is an alias for uapvNext, aot runtime -->
     <TargetGroups Include="uapaot">
+      <TargetFrameworkIdentifier>UAP</TargetFrameworkIdentifier>
       <PackageTargetRuntimeSuffix>aot</PackageTargetRuntimeSuffix>
       <NuGetTargetMoniker>$(UAPvNextTFMFull)</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>$(UAPvNextTFM)</NuGetTargetMonikerShort>
@@ -65,6 +73,7 @@
       <CompatibleWith>uap;netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="netstandard1.0">
+      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETStandard,Version=v1.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.0</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -72,6 +81,7 @@
       <UWPCompatible>true</UWPCompatible>
     </TargetGroups>
     <TargetGroups Include="netstandard1.1">
+      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETStandard,Version=v1.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.1</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -80,6 +90,7 @@
       <Imports>netstandard1.0</Imports>
     </TargetGroups>
     <TargetGroups Include="netstandard1.2">
+      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETStandard,Version=v1.2</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.2</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -88,6 +99,7 @@
       <Imports>netstandard1.1</Imports>
     </TargetGroups>
     <TargetGroups Include="netstandard1.3">
+      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETStandard,Version=v1.3</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.3</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -96,6 +108,7 @@
       <Imports>netstandard1.2</Imports>
     </TargetGroups>
     <TargetGroups Include="netstandard1.4">
+      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETStandard,Version=v1.4</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.4</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -104,6 +117,7 @@
       <Imports>netstandard1.3</Imports>
     </TargetGroups>
     <TargetGroups Include="netstandard1.5">
+      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETStandard,Version=v1.5</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.5</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -112,6 +126,7 @@
       <Imports>netstandard1.4</Imports>
     </TargetGroups>
     <TargetGroups Include="netstandard1.6">
+      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETStandard,Version=v1.6</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.6</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -120,6 +135,7 @@
       <Imports>netstandard1.5</Imports>
     </TargetGroups>
     <TargetGroups Include="netstandard2.0">
+      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETStandard,Version=v2.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard2.0</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -129,6 +145,7 @@
     </TargetGroups>
     <!-- netstandard is an alias for netstandard2.0 -->
     <TargetGroups Include="netstandard">
+      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETStandard,Version=v2.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard2.0</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -137,17 +154,20 @@
       <Imports>netstandard2.0</Imports>
     </TargetGroups>
     <TargetGroups Include="netcoreapp1.0">
+      <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETCoreApp,Version=v1.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcoreapp1.0</NuGetTargetMonikerShort>
       <CompatibleWith>netstandard1.6</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="netcoreapp2.0">
+      <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETCoreApp,Version=v2.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcoreapp2.0</NuGetTargetMonikerShort>
       <Imports>netcoreapp1.0</Imports>
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="netcoreapp2.1">
+      <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETCoreApp,Version=v2.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcoreapp2.1</NuGetTargetMonikerShort>
       <Imports>netcoreapp2.0</Imports>
@@ -155,26 +175,31 @@
     </TargetGroups>
     <!-- netcoreapp is an alias for netcoreapp2.1 -->
     <TargetGroups Include="netcoreapp">
+      <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETCoreApp,Version=v2.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcoreapp2.1</NuGetTargetMonikerShort>
       <Imports>netcoreapp2.1</Imports>
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="netcoreapp1.2">
+      <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETCoreApp,Version=v1.2</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcoreapp1.2</NuGetTargetMonikerShort>
     </TargetGroups>
     <TargetGroups Include="netcoreapp1.2corert">
+      <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETCoreApp,Version=v1.2</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcoreapp1.2</NuGetTargetMonikerShort>
     </TargetGroups>
     <TargetGroups Include="net45">
+      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.5</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.5</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net45</NuGetTargetMonikerShort>
       <CompatibleWith>netstandard1.1</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net451">
+      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.5.1</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.5.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net451</NuGetTargetMonikerShort>
@@ -182,6 +207,7 @@
       <CompatibleWith>netstandard1.2</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net46">
+      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.6</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.6</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net46</NuGetTargetMonikerShort>
@@ -189,6 +215,7 @@
       <CompatibleWith>netstandard1.3</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net461">
+      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.6.1</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.6.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net461</NuGetTargetMonikerShort>
@@ -196,6 +223,7 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net462">
+      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.6.2</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.6.2</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net462</NuGetTargetMonikerShort>
@@ -203,6 +231,7 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net463">
+      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.6.3</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.6.3</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net463</NuGetTargetMonikerShort>
@@ -210,6 +239,7 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net47">
+      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.7</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.7</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net47</NuGetTargetMonikerShort>
@@ -217,6 +247,7 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net471">
+      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.7.1</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.7.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net471</NuGetTargetMonikerShort>
@@ -224,6 +255,7 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net472">
+      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.7.2</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.7.2</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net472</NuGetTargetMonikerShort>
@@ -232,6 +264,7 @@
     </TargetGroups>
     <!-- netfx is an alias for net472 -->
     <TargetGroups Include="netfx">
+      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.7.2</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.7.2</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net472</NuGetTargetMonikerShort>
@@ -239,21 +272,25 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="win8">
+      <TargetFrameworkIdentifier>Windows</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>Windows,Version=v8.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>win8</NuGetTargetMonikerShort>
       <CompatibleWith>netstandard1.1</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="wpa81">
+      <TargetFrameworkIdentifier>WindowsPhoneApp</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>WindowsPhoneApp,Version=v8.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>wpa81</NuGetTargetMonikerShort>
       <CompatibleWith>netstandard1.2</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="portable_net45+win8+sl5">
+      <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.Portable.v4.0.Profile47</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETPortable,Version=v0.0,Profile=Profile47</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>portable-net45+win8+sl5</NuGetTargetMonikerShort>
     </TargetGroups>
     <TargetGroups Include="portable_net40+sl4+win8+wp8">
+      <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.Portable.v4.0.Profile36</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETPortable,Version=v0.0,Profile=Profile36</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>portable-net40+sl4+win8+wp8</NuGetTargetMonikerShort>
@@ -263,6 +300,7 @@
            build when specified directly or BuildAllConfigurations is set to True.  -->
     </TargetGroups>
     <TargetGroups Include="mono">
+      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>.NETFramework,Version=v4.6.3</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net463</NuGetTargetMonikerShort>
     </TargetGroups>
