--- a/external/harvestPackages/harvestPackages.props
+++ b/external/harvestPackages/harvestPackages.props
@@ -94,6 +94,9 @@
 <PackageReference Include="System.Runtime.WindowsRuntime">
   <Version>4.3.0</Version>
 </PackageReference>
+<PackageReference Include="System.Runtime.WindowsRuntime">
+  <Version>4.3.0</Version>
+</PackageReference>
 <PackageReference Include="System.Security.AccessControl">
   <Version>4.4.0</Version>
 </PackageReference>
