--- a/src/System.Runtime.WindowsRuntime/src/Configurations.props
+++ b/src/System.Runtime.WindowsRuntime/src/Configurations.props
@@ -2,6 +2,8 @@
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <PackageConfigurations>
+      netstandard1.0;
+      netstandard1.2;
       netcoreapp-Windows_NT;
     </PackageConfigurations>
     <BuildConfigurations>
