Migrate CertificateRequest and part of CertificateData to new ASN classes.

--- a/src/System.Security.Cryptography.X509Certificates/src/System.Security.Cryptography.X509Certificates.csproj
+++ b/src/System.Security.Cryptography.X509Certificates/src/System.Security.Cryptography.X509Certificates.csproj
@@ -72,7 +72,6 @@
     <Compile Include="System\Security\Cryptography\X509Certificates\StoreLocation.cs" />
     <Compile Include="System\Security\Cryptography\X509Certificates\StoreName.cs" />
     <Compile Include="System\Security\Cryptography\X509Certificates\SubjectAlternativeNameBuilder.cs" />
-    <Compile Include="System\Security\Cryptography\X509Certificates\TbsCertificate.cs" />
     <Compile Include="System\Security\Cryptography\X509Certificates\X500DistinguishedName.cs" />
     <Compile Include="System\Security\Cryptography\X509Certificates\X500DistinguishedNameFlags.cs" />
     <Compile Include="System\Security\Cryptography\X509Certificates\X501Attribute.cs" />
@@ -110,6 +109,12 @@
     <Compile Include="System\Security\Cryptography\X509Certificates\X509VerificationFlags.cs" />
     <Compile Include="System\Security\Cryptography\X509Certificates\Asn1\BasicConstraintsAsn.cs" />
     <Compile Include="System\Security\Cryptography\X509Certificates\Asn1\KeyUsageFlagsAsn.cs" />
+    <Compile Include="System\Security\Cryptography\X509Certificates\Asn1\TimeAsn.cs" />
+    <Compile Include="System\Security\Cryptography\X509Certificates\Asn1\ValidityAsn.cs" />
+    <Compile Include="System\Security\Cryptography\X509Certificates\Asn1\TbsCertificateAsn.cs" />
+    <Compile Include="System\Security\Cryptography\X509Certificates\Asn1\ExtensionsAsn.cs" />
+    <Compile Include="System\Security\Cryptography\X509Certificates\Asn1\X509ExtensionAsn.cs" />
+    <Compile Include="System\Security\Cryptography\X509Certificates\Asn1\CertificateAsn.cs" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetsWindows)' == 'true'">
     <Compile Include="Internal\Cryptography\Pal.Windows\CertificatePal.cs" />
