apply review feedback

--- a/src/System.Security.Cryptography.Algorithms/tests/Configurations.props
+++ b/src/System.Security.Cryptography.Algorithms/tests/Configurations.props
@@ -4,8 +4,10 @@
     <BuildConfigurations>
       netstandard-Unix;
       netstandard-Windows_NT;
+      netstandard-OSX;
       netcoreapp-Windows_NT;
       netcoreapp-Unix;
+      netcoreapp-OSX;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
