address review comments

--- a/src/mscorlib.WinRT-Facade/ref/Configurations.props
+++ b/src/mscorlib.WinRT-Facade/ref/Configurations.props
@@ -4,8 +4,8 @@
     <BuildConfigurations>
       uap;
       netcoreapp;
+      netstandard;
       netstandard1.0;
-      netstandard1.2;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
