--- a/external/harvestPackages/harvestPackages.props
+++ b/external/harvestPackages/harvestPackages.props
@@ -94,7 +94,7 @@
 <PackageReference Include="System.Runtime.WindowsRuntime">
   <Version>4.3.0</Version>
 </PackageReference>
-<PackageReference Include="System.Runtime.WindowsRuntime">
+<PackageReference Include="System.Runtime.WindowsRuntime.UI.Xaml">
   <Version>4.3.0</Version>
 </PackageReference>
 <PackageReference Include="System.Security.AccessControl">
