--- a/src/mscorlib.WinRT-Facade/ref/mscorlib.WinRT-Facade.csproj
+++ b/src/mscorlib.WinRT-Facade/ref/mscorlib.WinRT-Facade.csproj
@@ -14,10 +14,10 @@
   <ItemGroup>
     <Compile Include="TypeForwards.cs" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetGroup)' != 'netstandard1.0' and '$(TargetGroup)' != 'netstandard1.2'">
+  <ItemGroup Condition="'$(TargetGroup)' != 'netstandard1.0' and '$(TargetGroup)' != 'netstandard'">
     <ProjectReference Include="..\..\System.Runtime\ref\System.Runtime.csproj" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetGroup)' == 'netstandard1.0' or '$(TargetGroup)' == 'netstandard1.2'">
+  <ItemGroup Condition="'$(TargetGroup)' == 'netstandard1.0' or '$(TargetGroup)' == 'netstandard'">
     <Reference Include="System.Runtime" />
   </ItemGroup>
 </Project>
