Trying to fix compilation of PerformanceCounterLib for netcoreapp2.0 targets.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -346,6 +346,7 @@
     <DefineConstants Condition="'$(TargetsNetCoreApp)' == 'true'">$(DefineConstants);netcoreapp</DefineConstants>
     <DefineConstants Condition="'$(TargetsNetFx)' == 'true'">$(DefineConstants);netfx</DefineConstants>
     <DefineConstants Condition="'$(TargetGroup)' == 'uapaot'">$(DefineConstants);uapaot</DefineConstants>
+    <DefineConstants Condition="'$(TargetGroup)' == 'netcoreapp2.0'">$(DefineConstants);netcoreapp20</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup>
