--- a/src/System.Security.Cryptography.X509Certificates/src/System.Security.Cryptography.X509Certificates.csproj
+++ b/src/System.Security.Cryptography.X509Certificates/src/System.Security.Cryptography.X509Certificates.csproj
@@ -39,6 +39,9 @@
     <Compile Include="$(CommonPath)\System\Security\Cryptography\Asn1\SubjectPublicKeyInfoAsn.cs">
       <Link>Common\System\Security\Cryptography\Asn1\SubjectPublicKeyInfoAsn.cs</Link>
     </Compile>
+    <Compile Include="$(CommonPath)\System\Security\Cryptography\Asn1\X509ExtensionAsn.cs">
+      <Link>Common\System\Security\Cryptography\Asn1\X509ExtensionAsn.cs</Link>
+    </Compile>
     <Compile Include="$(CommonPath)\Internal\Cryptography\Helpers.cs">
       <Link>Internal\Cryptography\Helpers.cs</Link>
     </Compile>
@@ -115,7 +118,6 @@
     <Compile Include="System\Security\Cryptography\X509Certificates\Asn1\TimeAsn.cs" />
     <Compile Include="System\Security\Cryptography\X509Certificates\Asn1\ValidityAsn.cs" />
     <Compile Include="System\Security\Cryptography\X509Certificates\Asn1\X501AttributeAsn.cs" />
-    <Compile Include="System\Security\Cryptography\X509Certificates\Asn1\X509ExtensionAsn.cs" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetsWindows)' == 'true'">
     <Compile Include="Internal\Cryptography\Pal.Windows\CertificatePal.cs" />
