IO.Ports UAP: use GetCommPorts
Some cleanup for GetCommPorts

fix direction of stackalloc

--- a/src/System.IO.Ports/src/System.IO.Ports.csproj
+++ b/src/System.IO.Ports/src/System.IO.Ports.csproj
@@ -132,6 +132,9 @@
     <Compile Include="$(CommonPath)\Interop\Windows\mincore\Interop.OpenCommPort.cs">
       <Link>Common\Interop\Windows\mincore\Interop.OpenCommPort.cs</Link>
     </Compile>
+    <Compile Include="$(CommonPath)\Interop\Windows\mincore\Interop.GetCommPorts.cs">
+      <Link>Common\Interop\Windows\mincore\Interop.GetCommPorts.cs</Link>
+    </Compile>
     <Compile Include="System\IO\Ports\SerialPort.Uap.cs" />
     <Compile Include="System\IO\Ports\SerialStream.Uap.cs" />
   </ItemGroup>
