--- a/src/System.ComponentModel.TypeConverter/tests/System.ComponentModel.TypeConverter.Tests.csproj
+++ b/src/System.ComponentModel.TypeConverter/tests/System.ComponentModel.TypeConverter.Tests.csproj
@@ -10,14 +10,19 @@
   </PropertyGroup>
   <ItemGroup Condition="'$(TargetGroup)' != 'netstandard'">
     <Compile Include="Drawing\ColorConverterTests.cs" />
-    <Compile Include="Drawing\FontConverterTests.cs" />
-    <Compile Include="Drawing\IconConverterTests.cs" />
-    <Compile Include="Drawing\ImageConverterTests.cs" />
-    <Compile Include="Drawing\ImageFormatConverterTests.cs" />
     <Compile Include="Drawing\PointConverterTests.cs" />
     <Compile Include="Drawing\RectangleConverterTests.cs" />
     <Compile Include="Drawing\SizeConverterTests.cs" />
     <Compile Include="Drawing\SizeFConverterTests.cs" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetGroup)' == 'netcoreapp'">
+    <Compile Include="Drawing\FontConverterTests.cs" />
+    <Compile Include="Drawing\IconConverterTests.cs" />
+    <Compile Include="Drawing\ImageConverterTests.cs" />
+    <Compile Include="Drawing\ImageFormatConverterTests.cs" />
+    <Compile Include="$(CommonTestPath)\System\Drawing\Helpers.cs">
+      <Link>Common\System\Drawing\Helpers.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Design\Serialization\ComponentSerializationServiceTests.cs" />
@@ -149,9 +154,6 @@
     <Compile Include="Design\DesignerOptionServiceTests.cs" />
     <Compile Include="Design\DesignerTransactionTests.cs" />
     <Compile Include="Security\Authentication\ExtendedProtection\ExtendedProtectionPolicyTypeConverterTests.cs" />
-    <Compile Include="$(CommonTestPath)\System\Drawing\Helpers.cs">
-      <Link>Common\System\Drawing\Helpers.cs</Link>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(CommonTestPath)\System\Diagnostics\RemoteExecutorConsoleApp\RemoteExecutorConsoleApp.csproj">
