--- a/external/harvestPackages/harvestPackages.props
+++ b/external/harvestPackages/harvestPackages.props
@@ -91,6 +91,12 @@
 <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
   <Version>4.5.1</Version>
 </PackageReference>
+<PackageReference Include="System.Runtime.WindowsRuntime">
+  <Version>4.3.0</Version>
+</PackageReference>
+<PackageReference Include="System.Runtime.WindowsRuntime.UI.Xaml">
+  <Version>4.3.0</Version>
+</PackageReference>
 <PackageReference Include="System.Security.AccessControl">
   <Version>4.4.0</Version>
 </PackageReference>
