Adding EventLog Reader to the System.Diagnostics.EventLog dll/package.
This addresses issue  https://github.com/dotnet/corefx/issues/31358

The code came from https://github.com/PowerShell/PowerShell/tree/master/src/Microsoft.PowerShell.CoreCLR.Eventing, which in turn came from the .NET Desktop framework Dll System.Core.dll.   It was slightly modified to conform to codeing conventions, but there should be no semantic changes.

Note that System.Diagnostic.EventLog already exists as a Nuget package and is part of the Microsoft.Windows.Compatability Nuget package.    Previously this package/DLL only containd the 'write' APIs associated with the Windows EventLog.  This adds the EventLogReader and associated classes.

This package is mostly useful for .NET Core users who need to read the windows EventLog.

This PR is not ready to check in because there are no tests for the reader functionality.  This is where we need some community help.  Basicaly we need
some tests (fill out hte EventReaderTests.cs file).

If you are willing to help please leave a comment to that effect.  You can pull this pull request to your fork and immediately start adding tests.    We will
figure out how to get all edits pushed in when that time arrives.

--- a/src/System.Diagnostics.EventLog/tests/System.Diagnostics.EventLog.Tests.csproj
+++ b/src/System.Diagnostics.EventLog/tests/System.Diagnostics.EventLog.Tests.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <Compile Include="EventInstanceTests.cs" />
     <Compile Include="EventLogEntryCollectionTests.cs" />
+    <Compile Include="EventLogReaderTests\EventLogReaderTests.cs" />
     <Compile Include="EventLogTests\EventLogEntryWrittenTest.cs" />
     <Compile Include="EventLogTests\EventLogSourceCreationTests.cs" />
     <Compile Include="EventLogTests\EventLogTests.cs" />
